--- a/cat.html
+++ b/cat.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>clu.ng</title>
+    <title>og.email</title>
     <link rel="stylesheet" href="public/users/css/cat.css">
     <link rel="icon" href="public\src\img\1281904753252765717.png" type="image/x-icon">
     <link rel="shortcut icon" href="public\src\img\1281904753252765717.png" type="image/x-icon"> 
-    <meta content="follow me on ig @7irate !!" property="og:title" />
-    <meta content="http://clu.ng/" property="og:url" />
+    <meta content="follow me on ig @1raarchive !!" property="og:title" />
+    <meta content="http://og.email/" property="og:url" />
     <meta content="https://i.imgur.com/y6XhCX6.jpeg" property="og:image" />
     <meta content="#000000" data-react-helmet="true" name="theme-color" />
 </head>
