--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <div class="profile-container">
                 <img class="pp" src="./r2.wya.lol/pp.png" draggable="false">
-                <p class="username breathing" data-tooltip="uid: 1">decal</p>
+                <p class="username breathing" data-tooltip="uid: 1">revoke/archive >,.,< </p>
 
                 <div class="badges-container">
                     <div class="badges pic-badge" id="prem" data-tooltip="premium user" style="background-image: url('public/src/badges/premium.png');"></div>
@@ -89,6 +89,7 @@
 </body>
 
 </html>
+
 
 
 
